# cbonsai-saver

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  HOMEBREW.md  README.md  ROADMAP.md  Release  SECURITY.md  THIRD_PARTY_NOTICES.md  brick
.agents/: TODO.md
.agents/brick/: AGENT_USAGE.md  config.example.json  pyproject.toml  setup.py
.agents/brick/examples/llm-ingest/: instructions.md  memory-ingest.schema.json
.agents/brick/examples/memory-add/: blocked-unsafe.json  command.json  decision.json  routine.json  skill.json
.agents/brick/examples/memory-files/: command.md  decision.md  routine.md  skill.md
.agents/brick/src/brick/: __init__.py  cli.py  conflicts.py  index.py  memory.py
.agents/memory/decision/: 01KT701RPFSE5FZNAQR1C5Y6W5-use-brick-semantic-retrieval-for-this-repository.md  01KTD570YYMGZZFXT2VEX2W7K5-sign-the-completed-screen-saver-bundle-before-release-packaging.md  01KTD57RCQTWW8M92MV4XZ2Z86-keep-the-homebrew-tap-cask-only-for-cbonsai-saver.md  (+1 more)
.github/workflows/: ci.yml
Casks/: cbonsai-saver.rb
Formula/: cbonsai-saver.rb
cbonsai saver/cbonsai saver/: CBCommandLine.h  CBCommandLine.m  CBTerminalGeometry.h  CBTerminalGeometry.m  cbonsai-manual.html  cbonsai_saverView.h  cbonsai_saverView.m
cbonsai saver/cbonsai saver.xcodeproj/: project.pbxproj
patches/: cbonsai-v1.4.2-saver-noninteractive.patch
scripts/: build-cbonsai-source.sh  build-ncurses-source.sh  bundle-cbonsai.sh  package-release.sh  verify-bundled-cbonsai-launch.sh
tests/: CBCommandLineTests.m  CBTerminalGeometryTests.m  run.sh
(+2 files in other folders)
