[project]
name = "brick-agent-memory"
version = "0.1.0a0"
description = "Repo-local Markdown-first memory tooling for agentic development."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
brick = "brick.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
